# 栈和队列

add_executable(stack_queue_1 1.cpp)
add_executable(stack_queue_2 2.cpp)
add_executable(stack_queue_3 3.cpp)
add_executable(stack_queue_4 4.cpp)
add_executable(stack_queue_5 5.cpp)
add_executable(stack_queue_6 6.cpp)
add_executable(stack_queue_7 7.cpp)
add_executable(stack_queue_8 8.cpp)

add_executable(priority_queue_test priority_queue_test.cpp)
